// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`official MNX examples lay out without throwing > accidentals 1`] = `[]`;

exports[`official MNX examples lay out without throwing > articulations 1`] = `
[
  "Unsupported MNX: staccato marking in measure 0; not drawn.",
  "Unsupported MNX: tenuto marking in measure 0; not drawn.",
  "Unsupported MNX: accent marking in measure 0; not drawn.",
  "Unsupported MNX: strongAccent marking in measure 0; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > beam-hooks 1`] = `
[
  "Unsupported MNX: beams in measure 0; flags are drawn instead.",
]
`;

exports[`official MNX examples lay out without throwing > beams 1`] = `
[
  "Unsupported MNX: beams in measure 0; flags are drawn instead.",
  "Unsupported MNX: beams in measure 1; flags are drawn instead.",
]
`;

exports[`official MNX examples lay out without throwing > beams-across-barlines 1`] = `
[
  "Unsupported MNX: beams in measure 0; flags are drawn instead.",
]
`;

exports[`official MNX examples lay out without throwing > beams-inner-grace-notes 1`] = `
[
  "Unsupported MNX: beams in measure 0; flags are drawn instead.",
  "Unsupported MNX: grace notes in measure 0; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > beams-secondary-beam-breaks 1`] = `
[
  "Unsupported MNX: beams in measure 0; flags are drawn instead.",
]
`;

exports[`official MNX examples lay out without throwing > beams-secondary-beam-breaks-implied 1`] = `
[
  "Unsupported MNX: beams in measure 0; flags are drawn instead.",
]
`;

exports[`official MNX examples lay out without throwing > clef-changes 1`] = `
[
  "Unsupported MNX: mid-measure clef in measure 0; applied from the next measure.",
]
`;

exports[`official MNX examples lay out without throwing > dotted-notes 1`] = `[]`;

exports[`official MNX examples lay out without throwing > dynamics 1`] = `
[
  "Unsupported MNX: dynamics in measure 0; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > dynamics-accents 1`] = `
[
  "Unsupported MNX: dynamics in measure 0; not drawn.",
  "Unsupported MNX: dynamics in measure 1; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > full-measure-rests 1`] = `[]`;

exports[`official MNX examples lay out without throwing > grace-note 1`] = `
[
  "Unsupported MNX: grace notes in measure 0; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > grace-notes-beamed 1`] = `
[
  "Unsupported MNX: beams in measure 0; flags are drawn instead.",
  "Unsupported MNX: grace notes in measure 0; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > grand-staff 1`] = `
[
  "Unsupported MNX: a part with 2 staves; only staff 1 is laid out.",
  "Unsupported MNX: clef on staff 2 in measure 0; ignored.",
  "Unsupported MNX: beams in measure 0; flags are drawn instead.",
  "Unsupported MNX: sequence on staff 2 in measure 0; not laid out.",
  "Unsupported MNX: beams in measure 1; flags are drawn instead.",
  "Unsupported MNX: sequence on staff 2 in measure 1; not laid out.",
]
`;

exports[`official MNX examples lay out without throwing > hello-world 1`] = `[]`;

exports[`official MNX examples lay out without throwing > jumps-dal-segno 1`] = `
[
  "Unsupported MNX: segno in measure 1; not drawn.",
  "Unsupported MNX: jump in measure 4; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > jumps-ds-al-fine 1`] = `
[
  "Unsupported MNX: segno in measure 1; not drawn.",
  "Unsupported MNX: fine in measure 2; not drawn.",
  "Unsupported MNX: jump in measure 4; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > key-signatures 1`] = `[]`;

exports[`official MNX examples lay out without throwing > lyric-line-metadata 1`] = `
[
  "Unsupported MNX: lyrics in measure 0; not drawn.",
  "Unsupported MNX: lyrics in measure 1; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > lyrics-basic 1`] = `
[
  "Unsupported MNX: lyrics in measure 0; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > lyrics-multi-line 1`] = `
[
  "Unsupported MNX: lyrics in measure 0; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > measure-repeats 1`] = `
[
  "Unsupported MNX: measure repeat in measure 1; not drawn.",
  "Unsupported MNX: measure repeat in measure 3; not drawn.",
  "Unsupported MNX: measure repeat in measure 6; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > measure-repeats-counter 1`] = `
[
  "Unsupported MNX: measure repeat in measure 1; not drawn.",
  "Unsupported MNX: measure repeat in measure 2; not drawn.",
  "Unsupported MNX: measure repeat in measure 3; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > multi-note-tremolos 1`] = `
[
  "Unsupported MNX: multi-note tremolo in measure 0; its time is left blank.",
  "Unsupported MNX: multi-note tremolo in measure 1; its time is left blank.",
]
`;

exports[`official MNX examples lay out without throwing > multimeasure-rests 1`] = `
[
  "Unsupported MNX: 2 parts; only the first part is laid out.",
  "Unsupported MNX: 3 scores; only the first score's layout is used.",
]
`;

exports[`official MNX examples lay out without throwing > multiple-layouts 1`] = `
[
  "Unsupported MNX: 4 parts; only the first part is laid out.",
  "Unsupported MNX: 3 scores; only the first score's layout is used.",
]
`;

exports[`official MNX examples lay out without throwing > multiple-voices 1`] = `[]`;

exports[`official MNX examples lay out without throwing > orchestral-layout 1`] = `
[
  "Unsupported MNX: 13 parts; only the first part is laid out.",
]
`;

exports[`official MNX examples lay out without throwing > organ-layout 1`] = `
[
  "Unsupported MNX: a part with 3 staves; only staff 1 is laid out.",
  "Unsupported MNX: sequence on staff 2 in measure 0; not laid out.",
  "Unsupported MNX: sequence on staff 3 in measure 0; not laid out.",
]
`;

exports[`official MNX examples lay out without throwing > ottavas-8va 1`] = `
[
  "Unsupported MNX: ottavas in measure 0; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > parts 1`] = `
[
  "Unsupported MNX: 2 parts; only the first part is laid out.",
]
`;

exports[`official MNX examples lay out without throwing > repeats 1`] = `[]`;

exports[`official MNX examples lay out without throwing > repeats-alternate-endings-advanced 1`] = `
[
  "Unsupported MNX: ending in measure 1; not drawn.",
  "Unsupported MNX: ending in measure 3; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > repeats-alternate-endings-simple 1`] = `
[
  "Unsupported MNX: ending in measure 1; not drawn.",
  "Unsupported MNX: ending in measure 2; not drawn.",
  "Unsupported MNX: ending in measure 3; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > repeats-implied-start-repeat 1`] = `[]`;

exports[`official MNX examples lay out without throwing > repeats-more-once-repeated 1`] = `
[
  "Unsupported MNX: repeat played 4 times in measure 0; drawn as a plain end repeat.",
]
`;

exports[`official MNX examples lay out without throwing > rest-positions 1`] = `[]`;

exports[`official MNX examples lay out without throwing > single-note-tremolos 1`] = `
[
  "Unsupported MNX: tremolo marking in measure 0; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > slurs 1`] = `
[
  "Unsupported MNX: slurs in measure 0; not drawn.",
  "Unsupported MNX: slurs in measure 1; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > slurs-chords 1`] = `
[
  "Unsupported MNX: slurs in measure 0; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > slurs-targeting-specific-notes 1`] = `
[
  "Unsupported MNX: slurs in measure 0; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > system-layouts 1`] = `
[
  "Unsupported MNX: 6 parts; only the first part is laid out.",
]
`;

exports[`official MNX examples lay out without throwing > tempo-markings 1`] = `[]`;

exports[`official MNX examples lay out without throwing > three-note-chord-and-half-rest 1`] = `[]`;

exports[`official MNX examples lay out without throwing > tie-target-type 1`] = `
[
  "Unsupported MNX: ending in measure 2; not drawn.",
  "Unsupported MNX: ending in measure 3; not drawn.",
  "Unsupported MNX: tie with targetType crossVoice in measure 0; not drawn.",
  "Unsupported MNX: tie with targetType arpeggio in measure 1; not drawn.",
  "Unsupported MNX: tie with targetType crossJump in measure 1; not drawn.",
  "Unsupported MNX: laissez-vibrer tie in measure 4; not drawn.",
]
`;

exports[`official MNX examples lay out without throwing > ties 1`] = `[]`;

exports[`official MNX examples lay out without throwing > time-signature-glyphs 1`] = `[]`;

exports[`official MNX examples lay out without throwing > time-signatures 1`] = `[]`;

exports[`official MNX examples lay out without throwing > tuplets 1`] = `
[
  "Unsupported MNX: beams in measure 0; flags are drawn instead.",
]
`;

exports[`official MNX examples lay out without throwing > two-bar-c-major-scale 1`] = `[]`;
